<resources>
    <string name="app_name">Varna\'s Portfolio</string>
    <string name="name">BABY VARNA C P</string>
    <string name="designation">Jr.ANDROID DEVELOPER</string>
    <string name="skills">SKILLS</string>
    <string name="education">EDUCATION</string>
    <string name="work">WORK</string>
    <string name="experience">EXPERIENCE</string>
    <string name="programming_languages_title">PROGRAMMING LANGUAGES</string>
    <string name="languages">C,C++,Java,Kotlin</string>
    <string name="databases">MySQL,Firebase</string>
    <string name="operating_system">Windows,Linux</string>
    <string name="web">HTML,javaScript</string>
    <string name="web_technology">Web Technology</string>
    <string name="database_">Database</string>
    <string name="operating_system_">Operating System</string>
    <string name="education1"><![CDATA[SCHOOL OF INFORMATION SCIENCE & TECHNOLOGY, KANNUR UNIVERSITY, MANGATTUPARAMBA CAMPUS]]></string>
    <string name="course1">MASTER OF COMPUTER APPLICATION</string>
    <string name="percentage1">73.45%</string>
    <string name="course2">Bsc COMPUTER SCIENCE</string>
    <string name="percentage2">76.96%</string>
    <string name="college2">MAHATHMA GANDHI COLLEGE IRITTY</string>
    <string name="school">ST.TERESAS ANGLO INDIAN HIGHER SECONDARY SCHOOL</string>
    <string name="course3">+2</string>
    <string name="percentage3">86.96%</string>
    <string name="school1">KOODALI HIGHER SECONDARY SCHOOL</string>
    <string name="course4">SSLC</string>
    <string name="percentage4">96%</string>
    <string name="projects">PROJECTS</string>
    <string name="medizia">MEDIZIA</string>
    <string name="proj_des_1">Online Medicine Supply Application \nFrontEnd : Java \nBackEnd : MySQL</string>
    <string name="proj_des_2">Web &amp; Mobile based Application for Automating the Entry of Visitors in Apartment \nFrontEnd : Flutter \nBackEnd : Firebase</string>
    <string name="proj_des_3">Music Streaming Android Application \nFrontEnd : Kotlin \nBackEnd : Firebase</string>
    <string name="vizen">VIZEN</string>
    <string name="soundsapp">SOUNDSAPP</string>
    <string name="exp1">MOBIOTICS IT SOLUTIONS PRIVATE LIMITED,KOCHI(REMOTE)</string>
    <string name="exp_des_1">Android Developer Intern \n23/05/2022 – 23/11/2022\nLearned Kotlin For Developing Android Applications</string>
    <string name="exp_des_2">Junior Android Developer \n01/12/2022 - Present\nKnowledge in Kotlin,Android Studio,Android SDK</string>
</resources>