<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProjectActivity">

    <TextView
        android:id="@+id/tvProject1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/medizia"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        android:textColor="@color/default_color"/>

    <TextView
        android:id="@+id/tvDescription1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/proj_des_1"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:padding="5dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvProject2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vizen"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        android:textColor="@color/default_color"/>

    <TextView
        android:id="@+id/tvDescription2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/proj_des_2"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:padding="5dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvProject3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/soundsapp"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        android:textColor="@color/default_color"/>

    <TextView
        android:id="@+id/tvDescription3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/proj_des_3"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:padding="5dp"
        android:textStyle="bold"/>


</LinearLayout>