<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivProfile"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/img"
        android:layout_gravity="center"
        android:padding="10dp"
        android:layout_marginTop="100dp"/>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/name"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-black"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/tvDesignation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/designation"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-black"
        android:textSize="22sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSkills"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:backgroundTint="@color/default_color"
            android:text="@string/skills"/>

        <Button
            android:id="@+id/btnEducation"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:text="@string/education"
            android:backgroundTint="@color/default_color"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnProjects"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="16dp"
            android:padding="10dp"
            android:text="@string/projects"
            android:backgroundTint="@color/default_color"/>

        <Button
            android:id="@+id/btnExperience"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="16dp"
            android:padding="10dp"
            android:text="@string/experience"
            android:backgroundTint="@color/default_color"/>

    </LinearLayout>

</LinearLayout>